<resources>
    <string name="app_name">AppPlus</string>
    <string name="app_name_inner">AppPlus</string>

    <string name="action_settings">Setting</string>
    <string name="action_export">export</string>
    <string name="action_donate">Support Developer</string>
    <string name="action_opinion">Send opinion</string>
    <string name="action_retry">Reload</string>
    <string name="action_about">About</string>
    <string name="action_package">Package Info</string>
    <string name="action_wechat_helper">WechatHelper</string>
    <string name="action_close">Close</string>
    <string name="action_copy_to_clipboard">Copy and open Alipay</string>
    <string name="action_grunt">Grunt</string>
    <string name="action_refuse">Refuse</string>
    <string name="copy_success">copy successfully </string>
    <string name="empty"></string>

    <string name="tab_recent">Running</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_installed">Installed</string>
    <string name="tab_exported">Exported</string>
    <string name="tab_wechat">WechatHelper</string>

    <string name="menu_pop_item_file">Export to local</string>
    <string name="menu_pop_item_share">Share apk</string>
    <string name="menu_pop_item_detail">Watch detail</string>
    <string name="menu_pop_item_package">Watch package info</string>
    <string name="menu_pop_item_open">Open</string>
    <string name="menu_pop_item_more">More</string>

    <string name="menu_pop_item_file_delete">Delete</string>
    <string name="menu_pop_item_file_install">Install</string>

    <string name="menu_cab_export">Export</string>
    <string name="menu_cab_share">Share</string>
    <string name="menu_cab_select_all">Select all</string>

    <string name="menu_main_support">Support Development</string>
    <string name="menu_main_theme">Shift theme</string>

    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_point">Point</string>
    <string name="title_prepare_move">Prepare Move</string>
    <string name="title_export">Export...</string>
    <string name="dialog_message_no_sdcard">Your device has not Sdcard,please check it and retry.</string>
    <string name="dialog_message_file_exist">Package %1$s has exists upon %2$s ，is override?</string>
    <string name="dialog_message_export">"Are you sure export %1$s package to local directory %2$s ?</string>
    <string name="dialog_message_delete">"Are you sure delete %1$s 's package file ?</string>

    <string name="dialog_know">Know</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_go_setting_safe">Go set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_do_not_point">Not point</string>
    <string name="title_progress_export">Export&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="title_export_finish">Export success</string>
    <string name="dialog_message_export_finish">Package %1$s has exported to %2$s successfully，is watch file right now？</string>
    <string name="dialog_confirm_watch">Yes，check now</string>
    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_export">Confirm sure</string>
    <string name="dialog_confirm_delete">Confirm delete</string>
    <string name="dialog_action_exist_not_override">Not override</string>
    <string name="dialog_action_exist_override">Override</string>
    <string name="dialog_action_exist_watch_now">Check file</string>
    <string name="dialog_cancel_watch">No</string>
    <string name="select_transfer_way">select way</string>
    <string name="select_transfer_way_apk">Send %s package to friend</string>
    <string name="title_email_opinion">AppPlus opinion</string>

    <string name="category_advanced">Advance</string>
    <string name="category_advanced_key">category_key</string>

    <string name="category_other">Other</string>
    <string name="category_other_key">other_key</string>

    <string name="category_more">More</string>
    <string name="category_more_key">category_more</string>

    <string name="switch_preference_show_self_title">Running list show AppPlus</string>
    <string name="switch_preference_key_show_self">show_self</string>
    <string name="switch_preference_show_self_on">Running list will show AppPlus</string>
    <string name="switch_preference_show_self_off">Running list will filter AppPlus</string>

    <string name="switch_preference_list_item_brief_mode">Brief mode</string>
    <string name="switch_preference_key_list_item_brief_mode">list_item_brief_mode</string>
    <string name="switch_preference_list_item_brief_mode_on">Item will only show name and icon</string>

    <string name="preference_title_theme_primary">Theme Color</string>
    <string name="preference_title_wechat_helper">WeChat Helper</string>
    <string name="preference_title_open_wechat_download">Open Wechat Download</string>
    <string name="preference_title_wechat_helper_auto_check">Auto Check Apk In WeChat</string>
    <string name="preference_summary_theme_primary">Primary color,default is Material blue</string>
    <string name="preference_summary_wechat_helper_auto_check">When app start,it will check apk file in WeChat Download auto.</string>

    <string name="preference_title_about">About AppPlus</string>
    <string name="preference_title_score">Go score</string>
    <string name="preference_title_opinion">Opinion</string>
    <string name="preference_title_license">Open License</string>
    <string name="preference_title_check_update">Check new version</string>

    <string name="preference_summary_score">like</string>

    <string name="preference_key_about">about</string>
    <string name="preference_key_score">score</string>
    <string name="preference_key_opinion">opinion</string>
    <string name="preference_key_license">license</string>
    <string name="preference_key_check_update">check_update</string>
    <string name="preference_key_theme_primary">theme_primary</string>
    <string name="preference_key_wechat_helper">wechat_helper</string>
    <string name="preference_key_wechat_helper_auto_check">wechat_helper_auto_check</string>
    <string name="preference_key_open_wechat_download">open_wechat_download</string>
    <string name="change_log">Changelog</string>
    <string name="title_activity_app_detail">AppDetailActivity</string>

    <string name="search_title">Search</string>
    <string name="search_app_hint">Please input search key</string>
    <string name="color_chooser">Select color</string>
    <string name="current_version_info">Current version：%1$s</string>
    <string name="exit_point">Press again for exit</string>
    <string name="dialog_button_send_email">Send email</string>
    <string name="update_point_no_update">Current version is last</string>
    <string name="update_point_no_wifi">No wifi， it will updates auto in wifi condition.</string>
    <string name="update_point_time_out">Connect net is timeout,please retry later.</string>
    <string name="app_list_loading">Loading...</string>
    <string name="app_list_error_recent">Load fail</string>
    <string name="app_list_error_all">Load fai</string>
    <string name="app_list_error_search">Load fai</string>
    <string name="app_list_empty_recent">Running list is empty,please retry later</string>
    <string name="app_list_empty_all">Installed list is empty,please retry later</string>
    <string name="app_list_empty_search">No result</string>
    <string name="unknow">Unknow</string>
    <string name="fail_open_app">Open %1$s fail,please check it exists or not.</string>
    <string name="fail_export_app">Export %1$s package fail,please check it exists or not.</string>
    <string name="fail_share_app">Share %1$s package fail,please check it exists or not.</string>
    <string name="fail_install_app">Install %1$s fail,please check it exists or not.</string>

    <string name="support_exception_for_alipay">after check,your phone has not install alipay,so can not reward me,but thank you anyway ^_^</string>
    <string name="about_wechat_helper">Helper user to Move Apk file in WeChat download dir to AppPlus export dir,at the same time,Rename apk file end with .apk </string>
    <string name="dialog_point_no_file">Have not find any apk file in your storage</string>
    <string name="start_copy_and_rename">Copy And Rename</string>
    <string name="dialog_message_copy_and_rename">Are you sure copy and rename apk file to AppPlus export dir?</string>
    <string name="copy_with_delete">copy and delete</string>
    <string name="file_check_wechat">check file fail</string>
    <string name="dialog_message_copy_success">File has been copy to AppPlus export dir,watch it right now?</string>
    <string name="title_about_wechat_helper">About WeChat Helper</string>
    <string name="action_visit_host">Visit Host Page</string>
</resources>
