<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.Preference
        android:key="@string/preference_key_score"
        android:title="@string/preference_title_score"/>
    <!--<com.jenzz.materialpreference.Preference-->
    <!--android:key="@string/preference_key_opinion"-->
    <!--android:title="@string/preference_title_opinion"/>-->
    <com.jenzz.materialpreference.Preference
        android:key="@string/preference_key_check_update"
        android:title="@string/preference_title_check_update"/>
    <com.jenzz.materialpreference.Preference
        android:key="@string/preference_key_license"
        android:title="@string/preference_title_license"/>
    <com.jenzz.materialpreference.Preference
        android:key="@string/preference_key_about"
        android:title="@string/preference_title_about"/>
</PreferenceScreen>