<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="always|collapseActionView"/>

    <group android:id="@+id/action_more"
           android:visible="false"
           android:icon="?attr/themeOverFlowDrawable">

        <item android:id="@+id/action_settings"
              android:title="@string/action_settings"/>

        <item android:id="@+id/action_about"
              android:title="@string/action_about"/>

        <item android:id="@+id/action_opinion"
              android:title="@string/action_opinion"/>
    </group>

</menu>
